finalized part of courses overview quote

--- a/index.html
+++ b/index.html
@@ -80,16 +80,302 @@
               </p>
               <div class="cta-group">
                 <a href="#!" class="btn">Get Started</a>
-                <a href="#!">
+                <a href="#!" class="icon">
                   <i class="fa fa-play"></i>
                 </a>
               </div>
             </div>
-            <div class="media-block"></div>
+            <div class="media-block">
+              <img
+                class="cover"
+                src="./assets/images/hero-img.jpg"
+                alt="welcome"
+              />
+              <div class="courses">
+                <div class="book"></div>
+                <p class="desc">Courses 1000+</p>
+              </div>
+              <div class="schedules">
+                <div class="body">
+                  <p class="desc">Schedules</p>
+                  <ul class="list">
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                    <li class="item"></li>
+                  </ul>
+                </div>
+              </div>
+              <div class="students">
+                <div class="content">
+                  <p class="title">Our Active Students</p>
+                  <ul class="avatar__list">
+                    <li class="avatar__item">
+                      <img
+                        src="./assets/images/avatar-hero1.jpg"
+                        alt=""
+                        class="avatar"
+                      />
+                    </li>
+                    <li class="avatar__item">
+                      <img
+                        src="./assets/images/avatar-hero2.jpg"
+                        alt=""
+                        class="avatar"
+                      />
+                    </li>
+                    <li class="avatar__item">
+                      <img
+                        src="./assets/images/avatar-hero3.jpg"
+                        alt=""
+                        class="avatar"
+                      />
+                    </li>
+                    <li class="avatar__item">
+                      <img
+                        src="./assets/images/avatar-hero4.jpg"
+                        alt=""
+                        class="avatar"
+                      />
+                    </li>
+                    <div class="avatar__item">
+                      <span>10K+</span>
+                    </div>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
       <!-- End hero hero -->
+
+      <!-- Begin features -->
+      <div class="features">
+        <div class="main-content">
+          <div class="body">
+            <p class="title">F E A T U R E S</p>
+            <p class="heading">
+              We are providing suitable features for students.
+            </p>
+            <p class="desc">
+              Read our awesome feature that is absolutely suit for you. Explore
+              the feature and know the best.
+            </p>
+            <div class="feature__list">
+              <!-- Features item 1 -->
+              <div class="item">
+                <img
+                  src="./assets/images/features-icon1.svg"
+                  alt="icon1 "
+                  class="icon"
+                />
+                <p class="name__icon">Live Class</p>
+                <div class="desc__icon">
+                  We are providing live classes with the best teacher for you
+                </div>
+              </div>
+
+              <!-- Features item 2 -->
+              <div class="item">
+                <img
+                  src="./assets/images/features-icon2.svg"
+                  alt="icon1 "
+                  class="icon"
+                />
+                <p class="name__icon">Discuss</p>
+                <div class="desc__icon">
+                  Conversation with teachers or another students about task or
+                  any other thing
+                </div>
+              </div>
+
+              <!-- Features item 3 -->
+              <div class="item">
+                <img
+                  src="./assets/images/features-icon3.svg"
+                  alt="icon1 "
+                  class="icon"
+                />
+                <p class="name__icon">Task</p>
+                <div class="desc__icon">
+                  We give every of our students task for gathering knowledge at
+                  home
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End features -->
+
+      <!-- Begin courses -->
+      <div class="courses">
+        <div class="main-content">
+          <div class="body">
+            <p class="title">C O U R S E S</p>
+            <p class="heading">Popular Courses</p>
+            <div class="more-about">
+              <p class="desc">
+                Check out our most poular courses that suit for you. Here you
+                can find your favourite one.
+              </p>
+              <p class="view-all-courses">View All Courses</p>
+            </div>
+            <div class="courses__list">
+              <!-- Course 1 -->
+              <div class="item">
+                <img
+                  class="thumb"
+                  src="./assets/images/courses1.jpg"
+                  alt="thumb"
+                />
+                <div class="info">
+                  <div class="content-info">
+                    <h3 class="heading__info">Web Design</h3>
+                    <p class="value">
+                      Fee
+                      <span class="price"> $200</span>
+                    </p>
+                    <p class="desc">Web design basic to higer level</p>
+                    <div class="number">
+                      <p class="classes">40 Classes</p>
+                      <p class="months">3 Months</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Course 2 -->
+              <div class="item">
+                <img
+                  class="thumb"
+                  src="./assets/images/courses2.jpg"
+                  alt="thumb"
+                />
+                <div class="info">
+                  <div class="content-info">
+                    <h3 class="heading__info">Web Development</h3>
+                    <p class="value">
+                      Fee
+                      <span class="price"> $250</span>
+                    </p>
+                    <p class="desc">Web development basic to higer level</p>
+                    <div class="number">
+                      <p class="classes">30 Classes</p>
+                      <p class="months">3 Months</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Course 3 -->
+              <div class="item">
+                <img
+                  class="thumb"
+                  src="./assets/images/courses3.jpg"
+                  alt="thumb"
+                />
+                <div class="info">
+                  <div class="content-info">
+                    <h3 class="heading__info">UI/UX Design</h3>
+                    <p class="value">
+                      Fee
+                      <span class="price"> $350</span>
+                    </p>
+                    <p class="desc">UI/UX design basic to higer level</p>
+                    <div class="number">
+                      <p class="classes">50 Classes</p>
+                      <p class="months">3 Months</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End courses -->
+
+      <!-- Begin overview -->
+      <div class="overview">
+        <div class="main-content">
+          <div class="body">
+            <div class="list">
+              <div class="item">
+                <h3 class="quantity">100+</h3>
+                <p class="desc">Popular Courses</p>
+              </div>
+              <div class="item">
+                <h3 class="quantity">500+</h3>
+                <p class="desc">Skilled Trainer</p>
+              </div>
+              <div class="item">
+                <h3 class="quantity">1M+</h3>
+                <p class="desc">Student Learning</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End overview -->
+
+      <!-- Begin quote -->
+      <div class="quote">
+        <div class="main-content">
+          <div class="body">
+            <div class="quote-block">
+              <img src="./assets/images/quote-icon.svg" alt="quote" />
+              <blockquote class="desc">
+                “They are the best people. And this is the suitable platform to
+                learn from distance.”
+              </blockquote>
+              <p class="sign"><span class="name">Ben Foakes,</span> student.</p>
+              <div class="arrow">
+                <div class="arrow-left">
+                  <i class="fa fa-angle-left"></i>
+                </div>
+                <div class="arrow-right">
+                  <i class="fa fa-angle-right"></i>
+                </div>
+              </div>
+            </div>
+            <div class="img-block">
+              <img
+                class="img-css small-1"
+                src="./assets/images/avatar-hero1.jpg"
+                alt="avatar-hero1"
+              />
+              <img
+                class="img-css small-2"
+                src="./assets/images/avatar-hero2.jpg"
+                alt="avatar-hero2"
+              />
+              <img
+                class="img-css small-3"
+                src="./assets/images/avatar-hero3.jpg"
+                alt="avatar-hero3"
+              />
+              <img
+                class="img-css medium__1"
+                src="./assets/images/avatar-hero4.jpg"
+                alt="avatar-hero4"
+              />
+              <img
+                class="img-css medium__2"
+                src="./assets/images/avatar-hero5.jpg"
+                alt="avatar-hero5"
+              />
+              <img
+                class="img-css large"
+                src="./assets/images/avatar-hero6.jpg"
+                alt="avatar-hero6"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End quote -->
     </main>
   </body>
 </html>
