finalized part of ready

--- a/index.html
+++ b/index.html
@@ -376,6 +376,59 @@
         </div>
       </div>
       <!-- End quote -->
+
+      <!-- Begin Ready -->
+      <div class="ready">
+        <div class="main-content">
+          <div class="body">
+            <div class="info">
+              <h2 class="heading">Ready to Get Admit</h2>
+              <p class="desc">Create your account and Boost your Career.</p>
+            </div>
+            <a href="#!" class="btn">Get Started</a>
+          </div>
+        </div>
+      </div>
+      <!-- End Ready -->
+
+      <footer class="footer">
+        <img src="./assets/images/logo.svg" alt="logo" class="logo" />
+        <div class="wrapper">
+          <h3 class="heading">Community</h3>
+          <ul class="list">
+            <li class="item">Team Plans</li>
+            <li class="item">Blog</li>
+            <li class="item">Students</li>
+            <li class="item">Schoolarships</li>
+          </ul>
+        </div>
+        <div class="wrapper">
+          <h3 class="heading">Company</h3>
+          <ul class="list">
+            <li class="item">About</li>
+            <li class="item">Careers</li>
+            <li class="item">Press</li>
+          </ul>
+        </div>
+        <div class="wrapper">
+          <h3 class="heading">Community</h3>
+          <ul class="list">
+            <li class="item">Team Plans</li>
+            <li class="item">Blog</li>
+            <li class="item">Students</li>
+            <li class="item">Schoolarships</li>
+          </ul>
+        </div>
+        <div class="wrapper">
+          <h3 class="heading">Community</h3>
+          <ul class="list">
+            <li class="item">Team Plans</li>
+            <li class="item">Blog</li>
+            <li class="item">Students</li>
+            <li class="item">Schoolarships</li>
+          </ul>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
